# payment-requests-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
.github/workflows/: linter.yml  tests.yml
__project__/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
__project__/templates/: base.html  index.html
__project__/templates/includes/: footer.html  nav.html  pagination.html
infra/: nginx.conf
payment_requests/: admin.py  apps.py  consts.py  filters.py  models.py  sorters.py  urls.py  utils.py  views.py
payment_requests/api/: serializers.py  swagger_responses_examples.py  urls.py  viewsets.py
payment_requests/management/commands/: create_test_checking_accounts.py  create_test_payment_requests.py  create_test_users.py
payment_requests/migrations/: 0001_initial.py  0002_default_values_for_CheckingAccount_and_indexing_fields.py  0003_created_updated_fields_for_models.py
payment_requests/templates/payment_requests/: list.html
payment_requests/templates/payment_requests/checking_account/: filter.html  list.html  table.html
payment_requests/templates/payment_requests/includes/: pagination.html
payment_requests/templates/payment_requests/payment_request/: list.html
payment_requests/tests/: factories.py  test_views.py  test_viewsets.py
users/: forms.py  mixins.py  urls.py  views.py
users/management/commands/: create_test_users.py
users/templates/users/: create.html  list.html  login.html
users/tests/: factories.py  tests.py
