[tool.poetry]
name = "payment-requests-service"
version = "0.1.0"
description = "Platform for accepting payment requests"
authors = ["Raphael <raphael.mukha@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
django-model-utils = "^4.3.1"
django-phonenumber-field = "^7.3.0"
django-phonenumbers = "^1.0.1"
django-bootstrap5 = "^23.4"
django-filter = "^23.5"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"
gunicorn = "^21.2.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
load-dotenv = "^0.1.0"
factory-boy = "^3.3.0"
flake8 = "^7.0.0"
coverage = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
